:sparkle: Add example API calls notebook

--- a/notebooks/urn-randomizer API calls.ipynb
+++ b/notebooks/urn-randomizer API calls.ipynb
@@ -641,7 +641,7 @@
    "metadata": {},
    "source": [
     "## Randomize a participant\n",
-    "This will use `/api/config` endpoint. This endpoint requires the following parameters:\n",
+    "This will use `/api/randomize` endpoint. This endpoint requires the following parameters:\n",
     "* api_key - your API key\n",
     "* study - study name\n",
     "* id - participant ID\n",
