--- a/notebooks/urn-randomizer API calls.ipynb
+++ b/notebooks/urn-randomizer API calls.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,36 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'http://localhost:5000/api/participants?api_key=12345782&study=CHS+JCOIN'"
+       "dict_keys(['message', 'results', 'status'])"
       ]
      },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "response.url"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "dict_keys(['results', 'status'])"
-      ]
-     },
-     "execution_count": 16,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -361,7 +341,7 @@
        "'http://localhost:5000/api/config?api_key=12345782&study=CHS+JCOIN'"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,16 +352,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_keys(['results', 'status'])"
+       "dict_keys(['message', 'results', 'status'])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,13 +633,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "dct_param = {'api_key': API_KEY,\n",
     "             'study': 'CHS JCOIN', \n",
-    "             'id': 12343423}\n",
+    "             'id': 123434234}\n",
     "\n",
     "dct_param.update(dict([(factor, response.json()['results']['factors'][factor][0]) for factor in response.json()['results']['factors'].keys()]))\n",
     "api_url = 'http://localhost:5000/api/randomize'\n",
@@ -675,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -683,7 +663,7 @@
       "text/plain": [
        "{'api_key': '12345782',\n",
        " 'study': 'CHS JCOIN',\n",
-       " 'id': 12343423,\n",
+       " 'id': 123434234,\n",
        " 'african_american': 'Yes (including mixed)',\n",
        " 'crime_violence_screener_count': 'Low',\n",
        " 'electronic_monitoring': 'Yes',\n",
@@ -699,7 +679,7 @@
        " 'young_adult': 'Yes (18-25)'}"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -744,18 +724,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'results': [{'bg_state': {'bit_generator': 'PCG64',\n",
+       "{'message': 'Success',\n",
+       " 'results': [{'bg_state': {'bit_generator': 'PCG64',\n",
        "    'has_uint32': 1,\n",
        "    'state': {'inc': 30008503642980956324491363429807189605,\n",
-       "     'state': 31513730584825711566815015828799514432},\n",
+       "     'state': 319048474597050894074079425948099527333},\n",
        "    'uinteger': 1833294560},\n",
-       "   'datetime': 'Thu, 11 Feb 2021 03:12:55 GMT',\n",
+       "   'datetime': 'Thu, 11 Feb 2021 04:16:48 GMT',\n",
        "   'f_african_american': 'Yes (including mixed)',\n",
        "   'f_crime_violence_screener_count': 'Low',\n",
        "   'f_electronic_monitoring': 'Yes',\n",
@@ -769,13 +750,13 @@
        "   'f_substance_screener_symptoms': 'Low',\n",
        "   'f_substance_use_days': 'Low (0-12)',\n",
        "   'f_young_adult': 'Yes (18-25)',\n",
-       "   'id': '12343423',\n",
-       "   'trt': 'RMC-Q',\n",
+       "   'id': '123434234',\n",
+       "   'trt': 'RMC-A',\n",
        "   'user': 'api'}],\n",
        " 'status': 200}"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
