Handle invalid API key

--- a/notebooks/urn-randomizer API calls.ipynb
+++ b/notebooks/urn-randomizer API calls.ipynb
@@ -399,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -427,7 +427,7 @@
        "'http://localhost:5000/study_config?api_key=42e0b96469d72f3ba0030ccdf615e121f5b5c43f5f23f90ec9d1133b4ba25ea5&study=CHS+JCOIN'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -447,7 +447,7 @@
        "dict_keys(['message', 'results', 'status', 'user'])"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -744,7 +744,7 @@
        "5                                          "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -770,21 +770,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not str",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-19-40ae98780e68>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m              'id': 'api-test-5162'}\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mdct_param\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mupdate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdict\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfactor\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'results'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'factors'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mfactor\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mfactor\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mjson\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'results'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'factors'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m \u001b[0mapi_url\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'http://localhost:5000/study_participants'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrequests\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpost\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mapi_url\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mdct_param\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mTypeError\u001b[0m: list indices must be integers or slices, not str"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "dct_param = {'api_key': API_KEY,\n",
     "             'study': 'CHS JCOIN', \n",
@@ -804,7 +792,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -812,7 +800,7 @@
       "text/plain": [
        "{'api_key': '42e0b96469d72f3ba0030ccdf615e121f5b5c43f5f23f90ec9d1133b4ba25ea5',\n",
        " 'study': 'CHS JCOIN',\n",
-       " 'id': 'api-test-5',\n",
+       " 'id': 'api-test-5162',\n",
        " 'african_american': 'No',\n",
        " 'crime_violence_screener_count': 'Moderate (1-2)',\n",
        " 'electronic_monitoring': 'Other',\n",
@@ -828,7 +816,7 @@
        " 'young_adult': 'Other (26 or older)'}"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -846,16 +834,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'http://localhost:5000/study_participants?api_key=42e0b96469d72f3ba0030ccdf615e121f5b5c43f5f23f90ec9d1133b4ba25ea5&study=CHS+JCOIN&id=api-test-5&african_american=No&crime_violence_screener_count=Moderate+%281-2%29&electronic_monitoring=Other&hispanic_descent=Other&incarceration_days=Moderate+%2813-90%29&local_site=30-Dupage+County&prior_opioid_overdose=No&prior_substance_use_treatment=Any+other+SUD+treatment&probation_parole_community_supervision=Other&sex=Female&substance_screener_symptoms=Moderate+%281-2%29&substance_use_days=Moderate+%2813-44%29&young_adult=Other+%2826+or+older%29'"
+       "'http://localhost:5000/study_participants?api_key=42e0b96469d72f3ba0030ccdf615e121f5b5c43f5f23f90ec9d1133b4ba25ea5&study=CHS+JCOIN&id=api-test-5162&african_american=No&crime_violence_screener_count=Moderate+%281-2%29&electronic_monitoring=Other&hispanic_descent=Other&incarceration_days=Moderate+%2813-90%29&local_site=30-Dupage+County&prior_opioid_overdose=No&prior_substance_use_treatment=Any+other+SUD+treatment&probation_parole_community_supervision=Other&sex=Female&substance_screener_symptoms=Moderate+%281-2%29&substance_use_days=Moderate+%2813-44%29&young_adult=Other+%2826+or+older%29'"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -873,7 +861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -881,7 +869,7 @@
      "output_type": "stream",
      "text": [
       "{\n",
-      "  \"message\": \"Participant api-test-5 is already assigned\",\n",
+      "  \"message\": \"Success\",\n",
       "  \"results\": [\n",
       "    {\n",
       "      \"bg_state\": {\n",
@@ -889,11 +877,11 @@
       "        \"has_uint32\": 0,\n",
       "        \"state\": {\n",
       "          \"inc\": 30008503642980956324491363429807189605,\n",
-      "          \"state\": 117722767068972640524176574068072027241\n",
+      "          \"state\": 121861400407755107804560929089241863088\n",
       "        },\n",
       "        \"uinteger\": 4215420123\n",
       "      },\n",
-      "      \"datetime\": \"Thu, 01 Apr 2021 00:39:22 GMT\",\n",
+      "      \"datetime\": \"Fri, 17 Sep 2021 18:32:22 GMT\",\n",
       "      \"f_african_american\": \"No\",\n",
       "      \"f_crime_violence_screener_count\": \"Moderate (1-2)\",\n",
       "      \"f_electronic_monitoring\": \"Other\",\n",
@@ -907,12 +895,12 @@
       "      \"f_substance_screener_symptoms\": \"Moderate (1-2)\",\n",
       "      \"f_substance_use_days\": \"Moderate (13-44)\",\n",
       "      \"f_young_adult\": \"Other (26 or older)\",\n",
-      "      \"id\": \"api-test-5\",\n",
-      "      \"trt\": \"MART\",\n",
-      "      \"user\": \"api\"\n",
+      "      \"id\": \"api-test-5162\",\n",
+      "      \"trt\": \"RMC-A\",\n",
+      "      \"user\": \"mmurugesan\"\n",
       "    }\n",
       "  ],\n",
-      "  \"status\": 400\n",
+      "  \"status\": 200\n",
       "}\n"
      ]
     }
