Change login screen with a bootstrap5 login template

--- a/notebooks/urn-randomizer API calls.ipynb
+++ b/notebooks/urn-randomizer API calls.ipynb
@@ -805,13 +805,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "dct_param = {'api_key': API_KEY,\n",
     "             'study': 'CHS JCOIN', \n",
-    "             'id': 'api-test-516279'}\n",
+    "             'id': 'api-test-5162790'}\n",
     "\n",
     "dct_param.update(dict([(factor, dct_response_factors['results']['factors'][factor][1]) for factor in dct_response_factors['results']['factors'].keys()]))\n",
     "api_url = 'http://localhost:5000/study_participants'\n",
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -835,7 +835,7 @@
       "text/plain": [
        "{'api_key': '42e0b96469d72f3ba0030ccdf615e121f5b5c43f5f23f90ec9d1133b4ba25ea5',\n",
        " 'study': 'CHS JCOIN',\n",
-       " 'id': 'api-test-516279',\n",
+       " 'id': 'api-test-5162790',\n",
        " 'african_american': 'No',\n",
        " 'crime_violence_screener_count': 'Moderate (1-2)',\n",
        " 'electronic_monitoring': 'Other',\n",
@@ -851,7 +851,7 @@
        " 'young_adult': 'Other (26 or older)'}"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -869,16 +869,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'http://localhost:5000/study_participants?api_key=42e0b96469d72f3ba0030ccdf615e121f5b5c43f5f23f90ec9d1133b4ba25ea5&study=CHS+JCOIN&id=api-test-516279&african_american=No&crime_violence_screener_count=Moderate+%281-2%29&electronic_monitoring=Other&hispanic_descent=Other&incarceration_days=Moderate+%2813-90%29&local_site=30-Dupage+County&prior_opioid_overdose=No&prior_substance_use_treatment=Any+other+SUD+treatment&probation_parole_community_supervision=Other&sex=Female&substance_screener_symptoms=Moderate+%281-2%29&substance_use_days=Moderate+%2813-44%29&young_adult=Other+%2826+or+older%29'"
+       "'http://localhost:5000/study_participants?api_key=42e0b96469d72f3ba0030ccdf615e121f5b5c43f5f23f90ec9d1133b4ba25ea5&study=CHS+JCOIN&id=api-test-5162790&african_american=No&crime_violence_screener_count=Moderate+%281-2%29&electronic_monitoring=Other&hispanic_descent=Other&incarceration_days=Moderate+%2813-90%29&local_site=30-Dupage+County&prior_opioid_overdose=No&prior_substance_use_treatment=Any+other+SUD+treatment&probation_parole_community_supervision=Other&sex=Female&substance_screener_symptoms=Moderate+%281-2%29&substance_use_days=Moderate+%2813-44%29&young_adult=Other+%2826+or+older%29'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -896,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -912,11 +912,11 @@
       "        \"has_uint32\": 0,\n",
       "        \"state\": {\n",
       "          \"inc\": 30008503642980956324491363429807189605,\n",
-      "          \"state\": 250711358310615562130033611722574503125\n",
+      "          \"state\": 248841856396855261588793456688282493390\n",
       "        },\n",
       "        \"uinteger\": 4215420123\n",
       "      },\n",
-      "      \"datetime\": \"Fri, 17 Sep 2021 20:50:21 GMT\",\n",
+      "      \"datetime\": \"Fri, 17 Sep 2021 20:51:19 GMT\",\n",
       "      \"f_african_american\": \"No\",\n",
       "      \"f_crime_violence_screener_count\": \"Moderate (1-2)\",\n",
       "      \"f_electronic_monitoring\": \"Other\",\n",
@@ -930,8 +930,8 @@
       "      \"f_substance_screener_symptoms\": \"Moderate (1-2)\",\n",
       "      \"f_substance_use_days\": \"Moderate (13-44)\",\n",
       "      \"f_young_adult\": \"Other (26 or older)\",\n",
-      "      \"id\": \"api-test-516279\",\n",
-      "      \"trt\": \"RMC-A\",\n",
+      "      \"id\": \"api-test-5162790\",\n",
+      "      \"trt\": \"MART\",\n",
       "      \"user\": \"mmurugesan\"\n",
       "    }\n",
       "  ],\n",
