chore(readme): Fix requirements list and update readme

--- a/notebooks/Simulation plots.ipynb
+++ b/notebooks/Simulation plots.ipynb
@@ -636,7 +636,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:urn] *",
+   "display_name": "Python [conda env:urn]",
    "language": "python",
    "name": "conda-env-urn-py"
   },
